--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -1,15 +1,7 @@
 <div class="header">
   <div class="wrapper">
-    <span class="header-logo"><a href="https://www.smogon.com/forums/members/158401/"><img src="/_images/calcheader.png" alt="view my profile" height="50px" /></a></span><span class="nav"><a href="https://www.smogon.com/forums/forums/265/">Forum</a>
-      | <a href="https://play.pokemonshowdown.com/battlestadium">Showdown Chatroom</a> | <a href="https://discord.gg/TXmgYKu">Discord Channel</a> | <a href="https://www.smogon.com/forums/threads/3641523/">SuMo BSS Speed Tiers</a> | <a href="https://boe2.github.io/bsus.html">Usage
-        Stats</a> | <a href="https://github.com/cantsay/cantsay.github.io">GitHub Page</a> | <a href="https://jake-white.github.io/VGC-Damage-Calculator/">Original VGC Calculator</a></span><span class="themeselect">Theme: <select id="theme" name="thch"
-        onchange="changetheme()">
-        <option value="aegislash">Aegislash</option>
-        <option value="legacy">Legacy</option>
-        <option value="dark">Dark</option>
-        <option value="lgpe">LGPE</option>
-        <option value="volcarona">Volcarona</option>
-      </select></span>
+  <span class="nav"><a href="https://www.smogon.com/forums/threads/8th-generation-battle-tower-restricted-sparring-discussion-records.3656190/">Forum</a>
+      | <a href="https://discord.gg/QrsE2ep">Discord Server</a> | <a href="https://github.com/to-metrion/to-metrion.github.io">GitHub Page</a> | <a href="http://cantsay.github.io">Original BSS Calculator</a></span>
     <div style="clear:both"></div>
 	
 	<script>
@@ -45,11 +37,11 @@
 				$("#nbcalccss")[0].href = "_css/volc_nb_calc.css";
 				$("#apcalccss")[0].href = "_css/volc_ap_calc.css";
 				break;
-			case "aegislash":
+			case "dark":
 			default:
 				$("#select2css")[0].href = "_css/select2.css";
-				$("#nbcalccss")[0].href = "_css/nb_calc.css";
-				$("#apcalccss")[0].href = "_css/ap_calc.css";
+				$("#nbcalccss")[0].href = "_css/dark_nb_calc.css";
+				$("#apcalccss")[0].href = "_css/dark_ap_calc.css";
 		}
 	}
 	</script>
