--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div class="footer">
   <p><em>This calculator is based on the work of Honko, gamut, and Zarel. It was optimized for players in the Pokémon Championship Series by Tapin, Firestorm, and squirrelboy1225, for Battle Spot Singles players by cant say and
-      LegoFigure11, and for LGPE Players by LegoFigure11. </em><a href="./privacy/">Privacy Policy</a></p>
+      LegoFigure11, and for Battle Facilities by Eisenherz. </em><a href="./privacy/">Privacy Policy</a></p>
 </div>
