--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: cantsaycalc BETA
+title: Battle Facilities Calc
 ---
 <html lang="us">
-<link rel="icon" type="image/png" href="//cantsay.github.io/_images/favicon.ico" />
+<link rel="icon" type="image/png" href="//to-metrion.github.io/_images/favicon.ico" />
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,9 +45,9 @@ title: cantsaycalc BETA
 			var drop = $("#theme").val();
 
 			if (drop === "aegislash") {
-				$('#midimg')[0].src = "../_images/aegi trozei.png";
+				$('#midimg')[0].src = "../_images/tower.png";
 			} else if (drop === "dark") {
-				$('#midimg')[0].src = "../_images/shiny aegi trozei.png";
+				$('#midimg')[0].src = "../_images/tower.png";
 			} else if (drop === "legacy") {
 				$('#midimg')[0].src = "../_images/shiny aegi trozei.png";
 			} else if (drop === "volcarona") {
