--- a/_layouts/default-min.html
+++ b/_layouts/default-min.html
@@ -3,7 +3,7 @@ layout: default-min
 title: cantsaycalc BETA
 ---
 <html lang="us">
-<link rel="icon" type="image/png" href="//cantsay.github.io/_images/favicon.ico" />
+<link rel="icon" type="image/png" href="//to-metrion.github.io/_images/favicon.ico" />
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,15 +27,6 @@ title: cantsaycalc BETA
 		gtag("js", new Date());
 
 		gtag("config", "UA-115954423-1");
-	</script>
-
-	<!-- Ads By Google -->
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({
-			google_ad_client: "ca-pub-3144273328815394",
-			enable_page_level_ads: true
-		});
 	</script>
 
 </head>
