--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Battle Facilities Calc
+title: Battle Facilities Calculator
 ---
 <html lang="us">
 <link rel="icon" type="image/png" href="//to-metrion.github.io/_images/favicon.ico" />
