--- a/_css/select2.css
+++ b/_css/select2.css
@@ -191,6 +191,7 @@
   padding: 4px 20px 4px 5px;
   margin: 0;
   outline: 0;
+  color: #000;
   font-family: sans-serif;
   font-size: 1em;
   border: 1px solid #aaa;
