--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@ title: Battle Facilities Calculator
 	<title>{{ page.title }}</title>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link id="select2css" type="text/css" rel="stylesheet" href="/_css/select2.css" />
-	<link id="apcalccss" type="text/css" rel="stylesheet" href="/_css/ap_calc.css" />
-	<link id="nbcalccss" type="text/css" rel="stylesheet" href="/_css/nb_calc.css" />
+	<link id="apcalccss" type="text/css" rel="stylesheet" href="_css/dark_ap_calc.css" />
+	<link id="nbcalccss" type="text/css" rel="stylesheet" href="_css/dark_nb_calc.css" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<script type="text/javascript" src="/_scripts/themes.js"></script>
 	<base target="_blank">
