revert z-move button size

--- a/_css/dark_ap_calc.css
+++ b/_css/dark_ap_calc.css
@@ -257,6 +257,10 @@ select.toxic-counter {
   margin-left: 0.3em;
 }
 
+.poke-info .z-btn {
+  width: 3.5em;
+}
+
 .poke-info .ev-total {
   font-size: 0.8em;
 }
