implement AI auto IVs

--- a/_css/dark_ap_calc.css
+++ b/_css/dark_ap_calc.css
@@ -305,6 +305,13 @@ select.toxic-counter {
 
 /* Auto Level Box */
 #autolevel {
+  float: left;
+  text-decoration: none;
+  display: inline;
+}
+
+/* Auto IVs Box */
+#autoivs {
   float: right;
   text-decoration: none;
   display: inline;
