--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -5,7 +5,7 @@
     <div style="clear:both"></div>
 	
 	<script>
-	if (localStorage.getItem('selectedTheme')) {
+	/*if (localStorage.getItem('selectedTheme')) {
 		var selectedTheme = localStorage.getItem('selectedTheme');
 		$("#theme").val(selectedTheme);
 	}
@@ -17,11 +17,11 @@
 				$("#nbcalccss")[0].href = "_css/nb_calc.css";
 				$("#apcalccss")[0].href = "_css/ap_calc.css";
 				break;
-			case "dark":
+			case "dark":*/
 				$("#select2css")[0].href = "_css/select2.css";
 				$("#nbcalccss")[0].href = "_css/dark_nb_calc.css";
 				$("#apcalccss")[0].href = "_css/dark_ap_calc.css";
-				break;
+				/*break;
 			case "legacy":
 				$("#select2css")[0].href = "_css/select2.css";
 				$("#nbcalccss")[0].href = "_css/legacy_nb_calc.css";
@@ -42,7 +42,7 @@
 				$("#nbcalccss")[0].href = "_css/dark_nb_calc.css";
 				$("#apcalccss")[0].href = "_css/dark_ap_calc.css";
 		}
-	}
+	}*/
 	</script>
   </div>
 </div>
