--- a/_css/dark_ap_calc.css
+++ b/_css/dark_ap_calc.css
@@ -39,6 +39,11 @@ th {
   margin: 0.5em 0;
 }
 
+.big-text #mainResult:hover {  /* indicates the presence of click-to-copy function */
+    cursor: pointer;
+    opacity: 0.7;
+}
+
 .small-text {
   font-size: 0.8em;
 }
