add individual iv boxes

--- a/_css/dark_ap_calc.css
+++ b/_css/dark_ap_calc.css
@@ -316,7 +316,7 @@ select.toxic-counter {
 }
 
 /* Auto IVs Box */
-#autoivs {
+.autoivs {
   float: right;
   text-decoration: none;
   display: inline;
