--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@ title: Battle Facilities Calculator
 	<script type="text/javascript" src="/_scripts/themes.js"></script>
 	<base target="_blank">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script>
+	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script-->
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -49,18 +49,19 @@ title: Battle Facilities Calculator
 	</script>
 	<script type="text/javascript" src="../_scripts/themes_choose.js"></script>
 
-	<div class="privacyNotice" style="color:#000;border:solid black 2px;border-radius:4px;z-index:999;text-align:center;position:fixed;bottom:0;width:70%;margin-left:15%;padding-top:4px;background-color:#ffffab;display:none;">
+<!-- At some point lego's calc was updated to use localstorage instead of cookies. Therefore the privacy warning can be removed. -->
+	<!--div class="privacyNotice" style="color:#000;border:solid black 2px;border-radius:4px;z-index:999;text-align:center;position:fixed;bottom:0;width:70%;margin-left:15%;padding-top:4px;background-color:#ffffab;display:none;">
 		This site uses cookies for analytics and personalized content. By continuing to browse this site, you agree to this use.
 		<br />
 		<a id="cookie-dismisser" style="text-decoration:underline;cursor:pointer;">Click here to dismiss this message</a>.
 		<br />
 		<br />
 		Learn more about our use of <a href="./privacy/">cookies</a> and how to control them on our site.
-	</div>
+	</div-->
 
 	{% include footer.html %}
 
-	<script type="text/javascript" src="../_scripts/cookieNotice.js"></script>
+	<!--script type="text/javascript" src="../_scripts/cookieNotice.js"></script-->
 
 </body>
 
