finish commenting ad script

--- a/_layouts/default-min.html
+++ b/_layouts/default-min.html
@@ -17,7 +17,7 @@ title: Battle Facilities Calculator
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<base target="_blank">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script-->
+	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -27,7 +27,7 @@ title: Battle Facilities Calculator
 		gtag("js", new Date());
 
 		gtag("config", "UA-115954423-1");
-	</script>
+	</script-->
 
 </head>
 
