--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@ title: Battle Facilities Calculator
 	<script type="text/javascript" src="/_scripts/themes.js"></script>
 	<base target="_blank">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script-->
+	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-115954423-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -28,7 +28,7 @@ title: Battle Facilities Calculator
 		gtag("js", new Date());
 
 		gtag("config", "UA-115954423-1");
-	</script>
+	</script-->
 </head>
 
 <body>
