--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,23 @@ title: Battle Facilities Calculator
 		}
 	</script>
 	<script type="text/javascript" src="../_scripts/themes_choose.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var selects = document.querySelectorAll('.boost.calc-trigger');
+    selects.forEach(function(select) {
+        select.addEventListener('wheel', function(event) {
+            event.preventDefault(); // Prevents the whole page from scrolling when using the wheel over the dropdown
+            if (event.deltaY < 0) {
+                // Scroll up
+                select.selectedIndex = Math.max(select.selectedIndex - 1, 0);
+            } else {
+                // Scroll down
+                select.selectedIndex = Math.min(select.selectedIndex + 1, select.options.length - 1);
+            }
+        }, {passive: false});
+    });
+});
+</script>
 
 <!-- At some point lego's calc was updated to use localstorage instead of cookies. Therefore the privacy warning can be removed. -->
 	<!--div class="privacyNotice" style="color:#000;border:solid black 2px;border-radius:4px;z-index:999;text-align:center;position:fixed;bottom:0;width:70%;margin-left:15%;padding-top:4px;background-color:#ffffab;display:none;">
