--- a/_layouts/default-min.html
+++ b/_layouts/default-min.html
@@ -10,10 +10,10 @@ title: Battle Facilities Calculator
 	<meta charset="UTF-8" />
 	<title>{{ page.title }}</title>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<link type="text/css" rel="stylesheet" href="../../_css/select2.css" />
-	<link type="text/css" rel="stylesheet" href="../../_css/dark_ap_calc.css" />
-	<link type="text/css" rel="stylesheet" href="../../_css/dark_nb_calc.css" />
-	<script type="text/javascript" src="../../_scripts/themes.js"></script>
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/{{ site.baseurl }}/_css/select2.css" />
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/{{ site.baseurl }}/_css/dark_ap_calc.css" />
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/{{ site.baseurl }}/_css/dark_nb_calc.css" />
+	<script type="text/javascript" src="{{ site.baseurl }}/{{ site.baseurl }}/_scripts/themes.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<base target="_blank">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -40,7 +40,7 @@ title: Battle Facilities Calculator
 		{{ content }}
 
 	</div>
-	<script type="text/javascript" src="../../_scripts/themes_choose.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/{{ site.baseurl }}/_scripts/themes_choose.js"></script>
 
 <!-- At some point lego's calc was updated to use localstorage instead of cookies. Therefore the privacy warning can be removed. -->
 	<!--div class="privacyNotice" style="color:#000;border:solid black 2px;border-radius:4px;z-index:999;text-align:center;position:fixed;bottom:0;width:70%;margin-left:15%;padding-top:4px;background-color:#ffffab;display:none;">
@@ -49,12 +49,12 @@ title: Battle Facilities Calculator
 		<a id="cookie-dismisser" style="text-decoration:underline;cursor:pointer;">Click here to dismiss this message</a>.
 		<br />
 		<br />
-		Learn more about our use of <a href="../../privacy/">cookies</a> and how to control them on our site.
+		Learn more about our use of <a href="{{ site.baseurl }}/{{ site.baseurl }}/privacy/">cookies</a> and how to control them on our site.
 	</div-->
 
 	{% include footer.html %}
 
-	<!--script type="text/javascript" src="../../_scripts/cookieNotice.js"></script-->
+	<!--script type="text/javascript" src="{{ site.baseurl }}/{{ site.baseurl }}/_scripts/cookieNotice.js"></script-->
 
 </body>
 
