--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,10 +44,10 @@ title: Battle Facilities Calculator
 		if (document.getElementById("theme") != null && document.getElementById("midimg") != null) {
 			var drop = $("#theme").val();
 
-			$('#midimg')[0].src = "../_images/tower.png";
+			$('#midimg')[0].src = "{{ site.baseurl }}/_images/tower.png";
 		}
 	</script>
-	<script type="text/javascript" src="../_scripts/themes_choose.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/_scripts/themes_choose.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
@@ -93,7 +93,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 	{% include footer.html %}
 
-	<!--script type="text/javascript" src="../_scripts/cookieNotice.js"></script-->
+	<!--script type="text/javascript" src="{{ site.baseurl }}/_scripts/cookieNotice.js"></script-->
 
 </body>
 
