--- a/_css/select2.css
+++ b/_css/select2.css
@@ -74,7 +74,7 @@
   font-size: 1px;
   text-decoration: none;
   border: 0;
-  background: url('{{ site.baseurl }}/_images/select2.png') right top no-repeat;
+  background: url('../_images/select2.png') right top no-repeat;
   cursor: pointer;
   outline: 0;
 }
@@ -169,7 +169,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('{{ site.baseurl }}/_images/select2.png') no-repeat 0 1px;
+  background: url('../_images/select2.png') no-repeat 0 1px;
 }
 
 .select2-search {
@@ -198,11 +198,11 @@
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
-  background: #fff url('{{ site.baseurl }}/_images/select2.png') no-repeat 100% -22px;
-  background: url('{{ site.baseurl }}/_images/select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
-  background: url('{{ site.baseurl }}/_images/select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
-  background: url('{{ site.baseurl }}/_images/select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-  background: url('{{ site.baseurl }}/_images/select2.png') no-repeat 100% -22px, linear-gradient(top, #fff 85%, #eee 99%);
+  background: #fff url('../_images/select2.png') no-repeat 100% -22px;
+  background: url('../_images/select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
+  background: url('../_images/select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
+  background: url('../_images/select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
+  background: url('../_images/select2.png') no-repeat 100% -22px, linear-gradient(top, #fff 85%, #eee 99%);
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -210,11 +210,11 @@
 }
 
 .select2-search input.select2-active {
-  background: #fff url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%;
-  background: url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
-  background: url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
-  background: url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-  background: url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%, linear-gradient(top, #fff 85%, #eee 99%);
+  background: #fff url('../_images/select2-spinner.gif') no-repeat 100%;
+  background: url('../_images/select2-spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
+  background: url('../_images/select2-spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
+  background: url('../_images/select2-spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
+  background: url('../_images/select2-spinner.gif') no-repeat 100%, linear-gradient(top, #fff 85%, #eee 99%);
 }
 
 .select2-container-active .select2-choice,
@@ -369,7 +369,7 @@
 }
 
 .select2-more-results.select2-active {
-  background: #f4f4f4 url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100%;
+  background: #f4f4f4 url('../_images/select2-spinner.gif') no-repeat 100%;
 }
 
 .select2-more-results {
@@ -450,7 +450,7 @@
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-  background: #fff url('{{ site.baseurl }}/_images/select2-spinner.gif') no-repeat 100% !important;
+  background: #fff url('../_images/select2-spinner.gif') no-repeat 100% !important;
 }
 
 .select2-default {
@@ -499,7 +499,7 @@
   top: 4px;
   font-size: 1px;
   outline: none;
-  background: url('{{ site.baseurl }}/_images/select2.png') right top no-repeat;
+  background: url('../_images/select2.png') right top no-repeat;
 }
 
 .select2-container-multi .select2-search-choice-close {
@@ -573,7 +573,7 @@ only screen and (min-resolution: 144dpi) {
   .select2-search-choice-close,
   .select2-container .select2-choice abbr,
   .select2-container .select2-choice .select2-arrow b {
-    background-image: url('{{ site.baseurl }}/_images/select2x2.png') !important;
+    background-image: url('../_images/select2x2.png') !important;
     background-repeat: no-repeat !important;
     background-size: 60px 40px !important;
   }
